--- a/myproject/boards/static/boards/css/app.css
+++ b/myproject/boards/static/boards/css/app.css
@@ -1,3 +1,15 @@
+body {
+  background-image: url(../img/dot-grid.png);
+}
+.logo {
+  font-family: 'Peralta', cursive;
+}
+.logo a {
+  color: rgba(0,0,0,.9);
+}
+.logo a:hover, .logo a:active {
+  text-decoration: none;
+}
 tr {
     border-bottom: 2px solid #e6e8eb;
 }
@@ -16,5 +28,11 @@ tr {
   font-family: 'Peralta', cursive;
 }
 .form-group {
-    margin-top: 10px;
+    margin: 10px 0;
+}
+.navbar-collapse {
+    flex-grow: 0;
+}
+button.btn-primary {
+    width: 100%;
 }
