--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -49,8 +49,8 @@
     {% endblock %}
 </div>
 {% endblock body %}
-<script src="{% static 'boards/js/jquery.min.js' %}"></script>
-<script src="{% static 'boards/js/popper.min.js' %}"></script>
-<script src="{% static 'boards/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'boards/js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'boards/js/popper1.min.js' %}"></script>
+<script src="{% static 'boards/js/bootstrap1.min.js' %}"></script>
 </body>
 </html>
