--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -20,12 +20,12 @@
             {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="{% url 'my_account' %}" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         {{ user.username }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                        <a class="dropdown-item" href="#">My account</a>
-                        <a class="dropdown-item" href="#">Change password</a>
+                        <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
+                        <a class="dropdown-item" href="{% url 'password_reset' %}">Change password</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                     </div>
@@ -52,5 +52,6 @@
 <script src="{% static 'boards/js/jquery-3.2.1.min.js' %}"></script>
 <script src="{% static 'boards/js/popper1.min.js' %}"></script>
 <script src="{% static 'boards/js/bootstrap1.min.js' %}"></script>
+{% block javascript %}{% endblock %}
 </body>
 </html>
