--- a/myproject/templates/accounts/signup_users.html
+++ b/myproject/templates/accounts/signup_users.html
@@ -1,16 +1,18 @@
-{% extends 'base_accounts.html' %}
-
+{% extends 'accounts/base_accounts.html' %}
+{% block breadcrumb %}{% endblock %}
 {% block title %}Sign up to Django Boards{% endblock %}
-
+{% load form_tags widget_tweaks %}
+{% load form_tags %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
             <div class="card-body">
-                <h3 class="card-title">Sign up</h3>
-                <form method="post" novalidate>
+                <h3 class="card-title">Sign up as {{user_type}}: </h3>
+                <form method="post">
                     {% csrf_token %}
-                    {% include 'includes/form.html' %}
+                    {{ form.as_p }}
+<!--                    {% include 'includes/form.html' %}-->
                     <button type="submit" class="btn btn-primary btn-block">Create an account</button>
                 </form>
             </div>
