--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}Django Boards{% endblock %}</title>
-    <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@700&family=Josefin+Sans:wght@300;600&family=Khand:wght@700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="{% static 'boards/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'boards/css/app.css' %}">
+    <link rel="stylesheet" href="{% static 'boards/css/fontello.css' %}">
+
+
     {% block stylesheet %}{% endblock %}
 </head>
 <body>
 {% block body %}
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm">
     <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,8 +39,8 @@
             </ul>
             {% else %}
             <form class="form-inline ml-auto">
-                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                <a href="{% url 'login' %}" class="btn btn btn-outline-light">Log in</a>
+                <a href="{% url 'signup' %}" class="btn btn btn-outline-dark">Sign up</a>
             </form>
             {% endif %}
         </div>
@@ -42,13 +48,47 @@
 </nav>
 <div class="container">
     <ol class="breadcrumb my-4"> {% block breadcrumb %}{% endblock %}</ol>
-    {% block content %}
-    {% endblock %}
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
+
 </div>
+{% block footer%}
+<footer class="page-footer font-small">
+    <div class="container text-center text-md-left mt-4">
+        <div class="row mt-2">
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto">
+                <h6 class="text-uppercase font-weight-bold">About</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium cum, deserunt dicta, earum eum fugit hic iure iusto nisi nobis officia porro quaerat, quisquam rem!</p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                <h6 class="text-uppercase font-weight-bold">Other links</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                {% load flatpages %}
+                {% get_flatpages as flatpages %}
+                {% for page in flatpages %}
+                <p><a href="/pages{{ page.url }}" style="text-decoration: none;">{{ page.title }}</a></p>
+                {% endfor %}
+            </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p><i class="fas fa-home mr-3"></i> City, Country</p>
+                <p><i class="fas fa-envelope mr-3"></i>info@example.com</p>
+                <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+            </div>
+        </div>
+    </div>
+</footer>
+{% endblock footer%}
+
 {% endblock body %}
 <script src="{% static 'boards/js/jquery.min.js' %}"></script>
 <script src="{% static 'boards/js/popper1.min.js' %}"></script>
 <script src="{% static 'boards/js/bootstrap1.min.js' %}"></script>
 {% block javascript %} {% endblock %}
+
 </body>
 </html>
