--- a/myproject/templates/boards/topic_posts.html
+++ b/myproject/templates/boards/topic_posts.html
@@ -17,9 +17,10 @@
 </div>
 
 {% for post in posts %}
-<div id="{{ post.pk }}" class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %} {% if forloop.first %}border-dark{% endif %}">
+<div id="{{ post.pk }}"
+     class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %} {% if forloop.first %}border-pink{% else %}border-yellow{% endif %}">
     {% if forloop.first %}
-    <div class="card-header text-white bg-dark py-2 px-3">{{ topic.subject }}</div>
+    <div class="card-header">{{ topic.subject }}</div>
     {% endif %}
     <div class="card-body p-3">
         <div class="row">
