--- a/myproject/templates/accounts/signup.html
+++ b/myproject/templates/accounts/signup.html
@@ -6,7 +6,7 @@
         Sign up
     </div>
     <div class="card-body">
-        <h5 class="card-title">Sign up as for a free account</h5>
+        <h5 class="card-title">You are not registered yet</h5>
         <p class="card-text">Select below the type of account you want to create</p>
         <div class="btn-group" role="group" aria-label="Basic example">
             <a href="{% url 'signup_reader' %}" class="btn btn-primary">Reader</a>
