--- a/myproject/templates/includes/form.html
+++ b/myproject/templates/includes/form.html
@@ -23,3 +23,5 @@
     {% endif %}
 </div>
 {% endfor %}
+<script src='https://www.google.com/recaptcha/api.js'></script>
+<div class="g-recaptcha m-5" data-sitekey="6LcSN9AdAAAAAFgJ6irJwywjSnnSaZXp6weP4waY"></div>
