--- a/myproject/templates/includes/pagination.html
+++ b/myproject/templates/includes/pagination.html
@@ -1,5 +1,5 @@
-{% if is_paginated %}
-<nav aria-label="Topics pagination" class="mb-4">
+{% if page_obj.has_other_pages %}
+<div aria-label="Topics pagination" class="mb-4">
     <ul class="pagination">
         {% if page_obj.number > 1 %}
         <li class="page-item">
@@ -20,15 +20,12 @@
         </li>
         {% endif %}
 
-        {% for page_num in paginator.page_range %}
+        {% for page_num in page_obj.paginator.page_range %}
         {% if page_obj.number == page_num %}
         <li class="page-item active">
-            <span class="page-link">
-              {{ page_num }}
-              <span class="sr-only"></span>
-            </span>
+            <span class="page-link"> {{ page_num }}<span class="sr-only"></span></span>
         </li>
-        {% else %}
+        {% elif page_num > page_obj.number|add:-4 and page_num < page_obj.number|add:4 %}
         <li class="page-item">
             <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
         </li>
@@ -53,8 +50,12 @@
             <span class="page-link">Last</span>
         </li>
         {% endif %}
-
-
+        <ul class="pagination right">
+            <li class="page-item disabled">
+                <span class="page-link">{{ page_obj.number }} of {{ paginator.num_pages  }}</span>
+            </li>
+        </ul>
     </ul>
-</nav>
+
+</div>
 {% endif %}
