--- a/myproject/templates/accounts/signup_users.html
+++ b/myproject/templates/accounts/signup_users.html
@@ -2,8 +2,9 @@
 {% block breadcrumb %}{% endblock %}
 {% block title %}Sign up to Django Boards{% endblock %}
 {% load form_tags widget_tweaks %}
-{% load form_tags %}
 {% block content %}
+
+{% load crispy_forms_tags %}
 <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
@@ -11,8 +12,10 @@
                 <h3 class="card-title">Sign up as {{user_type}}: </h3>
                 <form method="post">
                     {% csrf_token %}
-                    {{ form.as_p }}
-<!--                    {% include 'includes/form.html' %}-->
+                    {{ form|crispy }}
+                        <script src='https://www.google.com/recaptcha/api.js'></script>
+                        <div class="g-recaptcha m-3" data-sitekey="6LcSN9AdAAAAAFgJ6irJwywjSnnSaZXp6weP4waY"></div>
+
                     <button type="submit" class="btn btn-primary btn-block">Create an account</button>
                 </form>
             </div>
