--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="{% static 'boards/css/app.css' %}">
     <link rel="stylesheet" href="{% static 'boards/css/fontello.css' %}">
 
-
     {% block stylesheet %}{% endblock %}
 </head>
 <body>
@@ -25,6 +24,19 @@
         <div class="collapse navbar-collapse" id="mainMenu">
             {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
+                {% if user.is_blogger %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'blogger_home' %}">Recent Actions<span class="sr-only"></span></a>
+                </li>
+                {% endif %}
+                {% if request.user.is_superuser %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'admin_page' %}">ADD users<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="admin/">Admin Panel<span class="sr-only"></span></a>
+                </li>
+                {% endif %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="{% url 'my_account' %}" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         {{ user.username }}
@@ -46,9 +58,17 @@
         </div>
     </div>
 </nav>
+
 <div class="container">
     <ol class="breadcrumb my-4"> {% block breadcrumb %}{% endblock %}</ol>
     <div class="content">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
         {% block content %}
         {% endblock %}
     </div>
