multiple files upload

--- a/myproject/templates/boards/new_topic.html
+++ b/myproject/templates/boards/new_topic.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load widget_tweaks %}
 
 {% block title %}Start a New Topic{% endblock %}
@@ -10,9 +11,18 @@
 {% endblock %}
 
 {% block content %}
-<form method="post" novalidate>
+<form method="POST"  enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'includes/form.html' %}
-    <button type="submit" class="btn btn-success">Post</button>
+    <input id="fileupload" type="file" name="file" multiple>
+    <button type="submit" class="btn btn-success mb-5" >Post</button>
 </form>
+{% endblock %}
+
+{% block javascript %}
+<script src="{% static 'boards/js/jquery-file-upload/vendor/jquery.ui.widget.js' %}"></script>
+<script src="{% static 'boards/js/jquery-file-upload/jquery.iframe-transport.js' %}"></script>
+<script src="{% static 'boards/js/jquery-file-upload/jquery.fileupload.js' %}"></script>
+
+<script src="{% static 'boards/js/basic-upload.js' %}"></script>
 {% endblock %}
