--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'boards/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'boards/css/app.css' %}">
     <link rel="stylesheet" href="{% static 'boards/css/fontello.css' %}">
+    <link rel="stylesheet" href="{% static 'boards/css/cropper.min.css' %}">
 
     {% block stylesheet %}{% endblock %}
 </head>
@@ -108,6 +109,7 @@
 <script src="{% static 'boards/js/jquery.min.js' %}"></script>
 <script src="{% static 'boards/js/popper1.min.js' %}"></script>
 <script src="{% static 'boards/js/bootstrap1.min.js' %}"></script>
+<script src="{% static 'js/cropper.min.js' %}"></script>
 {% block javascript %} {% endblock %}
 
 </body>
