--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="{% static 'boards/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'boards/css/app.css' %}">
     <link rel="stylesheet" href="{% static 'boards/css/fontello.css' %}">
-    <link rel="stylesheet" href="{% static 'boards/css/cropper.min.css' %}">
 
     {% block stylesheet %}{% endblock %}
 </head>
@@ -30,6 +29,14 @@
                     <a class="nav-link" href="{% url 'blogger_home' %}">Recent Actions<span class="sr-only"></span></a>
                 </li>
                 {% endif %}
+                {% if request.user.file %}
+                <li class="nav-item">
+                    <div class="mt-1">
+                        <img src="{{ request.user.file.url }}" style='width: 30px; border-radius: 100%;'>
+                    </div>
+                </li>
+                {% endif %}
+
                 {% if request.user.is_superuser %}
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'admin_page' %}">ADD users<span class="sr-only"></span></a>
@@ -49,6 +56,8 @@
                         <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                     </div>
                 </li>
+
+
             </ul>
             {% else %}
             <form class="form-inline ml-auto">
@@ -100,6 +109,7 @@
                 <p><i class="fas fa-envelope mr-3"></i>info@example.com</p>
                 <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
             </div>
+
         </div>
     </div>
 </footer>
@@ -109,7 +119,6 @@
 <script src="{% static 'boards/js/jquery.min.js' %}"></script>
 <script src="{% static 'boards/js/popper1.min.js' %}"></script>
 <script src="{% static 'boards/js/bootstrap1.min.js' %}"></script>
-<script src="{% static 'js/cropper.min.js' %}"></script>
 {% block javascript %} {% endblock %}
 
 </body>
