--- a/myproject/boards/static/boards/css/app.css
+++ b/myproject/boards/static/boards/css/app.css
@@ -143,3 +143,25 @@ footer {
 .activity-title {
     color: #313958;
 }
+    .div-table {
+  display: table;
+  width: 100%;
+  border-spacing: 5px;
+  padding: 6px 15px;
+  margin-bottom: 15px;
+  background-color: #FF7AA3;
+  border-radius: 2px;
+  color: white;
+  font-weight: 600;
+}
+.div-table-row {
+  display: table-row;
+  width: auto;
+  clear: both;
+}
+.div-table-col {
+    text-align: center;
+  float: left;
+  display: table-column;
+  width: 200px;
+}
